--- a/Aframe.html
+++ b/Aframe.html
@@ -9,33 +9,63 @@
       <a-sky src="img/img1.jpg"></a-sky>
         
       <a-sphere 
-      position="0 1.25 -5" 
+      position="0 1.25 -100" 
       radius="2" 
       src="img/sun.jpg"
-      scale="10 10 10 10"></a-sphere>
+      scale="50 50 50 50"></a-sphere>
 
       <a-sphere 
-      position="50 0 20" 
+      position="50 0 65" 
       radius="2" 
       src="img/mercury.jpg"
-      scale="5 5 5 5"></a-sphere>
-
-      <a-sphere 
-      position="50 0 60" 
-      radius="2" 
-      src="img/venus.jpg"
-      scale="5 5 5 5"></a-sphere>
+      scale="3 3 3 3"></a-sphere>
 
       <a-sphere 
       position="50 0 100" 
       radius="2" 
+      src="img/venus.jpg"
+      scale="4 4 4 4"></a-sphere>
+
+      <a-sphere 
+      position="50 0 150" 
+      radius="2" 
       src="img/earth.jpg"
+      scale="4 4 4 4"></a-sphere>
+
+      <a-sphere 
+      position="50 0 165" 
+      radius="2" 
+      src="img/moon.jpg"
+      scale="0.5 0.5 0.5 0.5"></a-sphere>
+
+      <a-sphere 
+      position="50 0 200" 
+      radius="2" 
+      src="img/mars.jpg"
+      scale="3 3 3 3"></a-sphere>
+
+      <a-sphere 
+      position="50 0 250" 
+      radius="2" 
+      src="img/jupiter.jpg"
+      scale="8 8 8 8"></a-sphere>
+
+      <a-sphere 
+      position="50 0 300" 
+      radius="2" 
+      src="img/saturn.jpg"
+      scale="7 7 7 7"></a-sphere>
+
+      <a-sphere 
+      position="50 0 350" 
+      radius="2" 
+      src="img/neptune.jpg"
       scale="5 5 5 5"></a-sphere>
 
       <a-sphere 
-      position="50 0 140" 
+      position="50 0 400" 
       radius="2" 
-      src="img/mars.jpg"
+      src="img/uranus.jpg"
       scale="5 5 5 5"></a-sphere>
       
     </a-scene>
