--- a/Aframe.html
+++ b/Aframe.html
@@ -7,7 +7,7 @@
     <title>Mobile Web Project</title>
 </head>
 <body>
-    <a-scene>
+    <a-scene >
         <a-entity camera look-controls wasd-controls="acceleration:400" fly="true" position="0 10 0">
         </a-entity>
 
@@ -23,8 +23,10 @@
             <img id="sun" src="img/sun.jpg"">
             <img id="uranus" src="img/uranus.jpg">
             <img id="venus" src="img/venus.jpg">
+            <audio id="sound" src="sound/space.mp3" preload="auto"></audio>
         </a-assests>
-        <a-sphere position="-550 1.25 -15" radius="100.5" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 30000; loop: true; easing: linear; segment-height: 56;"  material="src: #sun; shader: flat; " >
+
+        <a-sphere position="-550 1.25 -15" radius="100.5" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 30000; loop: true; easing: linear; segment-height: 56;"  material="src: #sun; shader: flat; " sound="src: url(sound/space.mp3); autoplay: true; loop: true; volume: 75;" >
             <!-- Mercury ring -->
             <a-ring material="shader: flat; opacity: 0.5; color: white;" segments-theta="512" radius-inner="500" radius-outer="500.1" side="double" rotation="90 0 0"></a-ring>
             <!-- Venus ring -->
@@ -44,17 +46,17 @@
 
         </a-sphere>
         <!-- Mercury planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 87600; fill: forwards; easing: linear; loop: true;" id="mercury_entity">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 87600; fill: forwards; easing: linear; loop: true;" id="mercury_entity"  >
             <a-sphere position="500 0 0" radius="3.8" src="#mercury" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 58650; loop: true; easing: linear; segment-height: 56;">
             </a-sphere>
         </a-entity>
         <!-- Venus planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 222000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 222000; fill: forwards; easing: linear; loop: true;">
             <a-sphere position="525 0 0" radius="4.0" src="#venus" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 243000; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
         <!-- Earth planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 365000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to:; dur: 365000; fill: forwards; easing: linear; loop: true;">
             <a-sphere earth position="546 0 0" radius="5.0" src="#earth" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 1000; loop: true; easing: linear; segment-height: 56;" >
                 <!-- Moon ring -->
                 <a-ring material="shader: flat; opacity: 0.5; color: white;" segments-theta="512" radius-inner="9.3" radius-outer="9.31" side="double" rotation="90 0 0"></a-ring>
@@ -64,32 +66,34 @@
             </a-sphere>
         </a-entity>
         <!-- Mars planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 686000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 686000; fill: forwards; easing: linear; loop: true;">
             <a-sphere position="576 0 0" radius="5.0" src="#mars" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 1030; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
         <!-- Jupiter planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 4328000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 4328000; fill: forwards; easing: linear; loop: true;">
             <a-sphere position="720 0 0" radius="8" src="#jupiter" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 410; loop: true; easing: linear; segment-height: 56;"  >
             </a-sphere>
         </a-entity>
         <!-- Saturn planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 10950000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 10950000; fill: forwards; easing: linear; loop: true;">
             <a-sphere position="760 0 0" radius="7.5" src="#saturn" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 440; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
         <!-- Uranus planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 30660000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30660000; fill: forwards; easing: linear; loop: true;">
             <a-sphere position="810 0 0" radius="5.5" src="#uranus" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 720; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
         <!-- Neptune planet -->
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: 0 360 0; dur: 90520000; fill: forwards; easing: linear; loop: true;">
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 90520000; fill: forwards; easing: linear; loop: true;">
             <a-sphere position="850 0 0" radius="5.5" src="#neptune" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 670; loop: true; easing: linear; segment-height: 56;"  >
             </a-sphere>
         </a-entity>
         <!-- Background (Galaxy) -->
         <a-sky src="#space" radius="5000"></a-sky>
+
+        <a-entity sound="src: #sound"></a-entity>
         
     </a-schene>
     
