--- a/Aframe.html
+++ b/Aframe.html
@@ -24,6 +24,7 @@
             <img id="venus" src="img/venus.jpg">
             <audio id="sound" src="sound/space.mp3" preload="auto"></audio>
             <a-asset-item id="spacestation" src="spacestation.glb"></a-asset-item>
+            <a-asset-item id="astro" src="Asteroids.glb"></a-asset-item>
             
         </a-assests>
 
@@ -47,7 +48,8 @@
 
         </a-sphere>
 
-        <a-entity gltf-model="#spacestation" position="10 20 10" scale="0.2 0.2 0.2" animation="dur: 30000;"></a-entity>
+        <a-entity gltf-model="#spacestation" position="10 20 10" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity gltf-model="#astro" position="65 7 -20" scale="20 20 20" animation="dur: 30000;" rotation="0 90 0"></a-entity>
 
         <!-- Mercury planet -->
         <a-text value="Sun" position="-350 7 -15" scale="100 100 100"></a-text>
