--- a/Aframe.html
+++ b/Aframe.html
@@ -25,6 +25,7 @@
             <audio id="sound" src="sound/space.mp3" preload="auto"></audio>
             <a-asset-item id="spacestation" src="spacestation.glb"></a-asset-item>
             <a-asset-item id="astro" src="Asteroids.glb"></a-asset-item>
+            <a-asset-item id="probe" src="probe.glb"></a-asset-item>
             
         </a-assests>
 
@@ -50,7 +51,7 @@
 
         <a-entity gltf-model="#spacestation" position="10 20 10" scale="0.1 0.1 0.1"></a-entity>
         <a-entity gltf-model="#astro" position="65 7 -20" scale="20 20 20" animation="dur: 30000;" rotation="0 90 0"></a-entity>
-
+        <a-entity gltf-model="#probe" position="8 10 -20" scale="0.1 0.1 0.1" animation="dur: 30000;" rotation="0 90 0"></a-entity>
         <!-- Mercury planet -->
         <a-text value="Sun" position="-350 7 -15" scale="100 100 100"></a-text>
 
