--- a/Aframe.html
+++ b/Aframe.html
@@ -57,7 +57,7 @@
 
         <a-text value="Mercury" position="-54 7 -15" scale="10 10 10"></a-text>
 
-        <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;" id="mercury_entity"  >
+        <a-entity position="-550 1.25 -15" animation="property: rotation; to:  ; dur: 30000; fill: forwards; easing: linear; loop: true;" id="mercury_entity"  >
             <a-sphere position="500 0 0" radius="3.8" src="#mercury" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 58650; loop: true; easing: linear; segment-height: 56;">
             </a-sphere>
         </a-entity>
@@ -80,7 +80,7 @@
                 <!-- Moon ring -->
                 <a-ring material="shader: flat; opacity: 0.5; color: white;" segments-theta="512" radius-inner="9.3" radius-outer="9.31" side="double" rotation="90 0 0"></a-ring>
                 <!-- Moon -->
-                <a-sphere position="10 0 0" radius="0.5" src="#moon" animation="property: rotation; to: 0 360 0; fill: backwards; duration: 2000; loop: true; easing: linear; segment-height: 56;">
+                <a-sphere position="10 0 0" radius="0.5" src="#moon" animation="property: rotation; to: 0 360 0; fill: backwards; duration: 20000; loop: true; easing: linear; segment-height: 56;">
                 </a-sphere>
             </a-sphere>
         </a-entity>
@@ -89,7 +89,7 @@
         <!-- Mars planet -->
         <a-text value="Mars" position="23 10 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="576 0 0" radius="5.0" src="#mars" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 1030; loop: true; easing: linear; segment-height: 56;" >
+            <a-sphere position="576 0 0" radius="5.0" src="#mars" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 10300; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
 
@@ -97,7 +97,7 @@
         <!-- Jupiter planet -->
         <a-text value="Jupiter" position="166 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="720 0 0" radius="8" src="#jupiter" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 410; loop: true; easing: linear; segment-height: 56;"  >
+            <a-sphere position="720 0 0" radius="8" src="#jupiter" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 4100; loop: true; easing: linear; segment-height: 56;"  >
             </a-sphere>
         </a-entity>
 
@@ -105,7 +105,7 @@
         <!-- Saturn planet -->
         <a-text value="Saturn" position="205 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="760 0 0" radius="7.5" src="#saturn" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 440; loop: true; easing: linear; segment-height: 56;" >
+            <a-sphere position="760 0 0" radius="7.5" src="#saturn" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 4400; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
 
@@ -113,7 +113,7 @@
         <!-- Uranus planet -->
         <a-text value="Uranus" position="250 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="810 0 0" radius="5.5" src="#uranus" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 720; loop: true; easing: linear; segment-height: 56;" >
+            <a-sphere position="810 0 0" radius="5.5" src="#uranus" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 7200; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
 
@@ -121,7 +121,7 @@
         <!-- Neptune planet -->
         <a-text value="Neptune" position="295 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="850 0 0" radius="5.5" src="#neptune" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 670; loop: true; easing: linear; segment-height: 56;"  >
+            <a-sphere position="850 0 0" radius="5.5" src="#neptune" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 6700d; loop: true; easing: linear; segment-height: 56;"  >
             </a-sphere>
         </a-entity>
 
