--- a/Aframe.html
+++ b/Aframe.html
@@ -66,7 +66,7 @@
         <!-- Venus planet -->
         <a-text value="Venus" position="-28 7 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="525 0 0" radius="4.0" src="#venus" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 243000; loop: true; easing: linear; segment-height: 56;" >
+            <a-sphere position="525 0 0" radius="4.0" src="#venus" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 24300; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
 
@@ -97,7 +97,7 @@
         <!-- Jupiter planet -->
         <a-text value="Jupiter" position="166 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="720 0 0" radius="8" src="#jupiter" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 4100; loop: true; easing: linear; segment-height: 56;"  >
+            <a-sphere position="720 0 0" radius="8" src="#jupiter" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 41000; loop: true; easing: linear; segment-height: 56;"  >
             </a-sphere>
         </a-entity>
 
@@ -105,7 +105,7 @@
         <!-- Saturn planet -->
         <a-text value="Saturn" position="205 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="760 0 0" radius="7.5" src="#saturn" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 4400; loop: true; easing: linear; segment-height: 56;" >
+            <a-sphere position="760 0 0" radius="7.5" src="#saturn" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 44000; loop: true; easing: linear; segment-height: 56;" >
             </a-sphere>
         </a-entity>
 
@@ -121,7 +121,7 @@
         <!-- Neptune planet -->
         <a-text value="Neptune" position="295 13 -15" scale="10 10 10"></a-text>
         <a-entity position="-550 1.25 -15" animation="property: rotation; to: ; dur: 30000; fill: forwards; easing: linear; loop: true;">
-            <a-sphere position="850 0 0" radius="5.5" src="#neptune" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 6700d; loop: true; easing: linear; segment-height: 56;"  >
+            <a-sphere position="850 0 0" radius="5.5" src="#neptune" animation="property: rotation; to: 0 360 0; fill: backwards; dur: 67000; loop: true; easing: linear; segment-height: 56;"  >
             </a-sphere>
         </a-entity>
 
